# RapidASR

./: .gitignore  CMakeLists.txt  README.md  license.md
cpp/: test.cpp
include/: libqmasrapi.h  precomp.h  qmasr.h  qmdatadef.h
kaldi-feat/: CMakeLists.txt
models/: readme.md
python/: README.md  dorecog.py  recognize_onnx.py
python/base_paddlespeech/: README.md  main.py  requirements.txt
python/base_paddlespeech/deepspeech2/s2t/io/: utility.py
python/base_wenet/: README.md
python/base_wenet/pretrain_model/20211025_conformer_exp/: test.yaml
python/base_wenet/wenet/: wenet_infer.py
python/wenet/: wenet_infer.py
scripts/: readme.md  test.sh
source/: libqmasrapi.cpp  librpasrapi.cpp  qmasr.cpp  testapp.cpp
thirdpart/: build_win.cmd  readme.md
thirdpart/ctc_decoder/: CMakeLists.txt
thirdpart/kaldi-feat/: CMakeLists.txt  readme.md
thirdpart/kaldi-feat/base/: kaldi-types.h  version.h
thirdpart/openfst/: AUTHORS  BUGS.md  CMakeLists.txt  COPYING  NEWS  README  README.md  configure  openfst.sln
thirdpart/openfst/src/: CMakeLists.txt  openfst.user.props
thirdpart/openfst/src/extensions/special/: CMakeLists.txt
thirdpart/openfst/src/include/fst/: flags.h  log.h
thirdpart/openfst/src/lib/: CMakeLists.txt  flags.cc  libfst.vcxproj
thirdpart/openfst/src/script/: libfstscript.vcxproj  libfstscript.vcxproj.filters
