cmake_minimum_required(VERSION 3.19)
project(kaldi-feat)
include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/CLAPACK ${SDK_ROOT}include)
add_compile_options(-fPIC)
add_definitions(-DHAVE_OPENBLAS)
aux_source_directory(base SRC_BASE)
aux_source_directory(itf SRC_ITF)
aux_source_directory(feat SRC_FEAT)
aux_source_directory(matrix SRC_MATRIX)
aux_source_directory(transform SRC_TRANSFORM)
aux_source_directory(util SRC_UTIL)
aux_source_directory(hmm SRC_HMM)
aux_source_directory(gmm SRC_GMM)
aux_source_directory(tree SRC_TREE)
aux_source_directory(lat SRC_LAT)
aux_source_directory(fstext SRC_FSTEXT)
list(REMOVE_ITEM SRC_FEAT  "wave-reader-test.cc")

set(LIBNAME kaldi-feat)
add_library(${LIBNAME} SHARED ${SRC_BASE} ${SRC_ITF}  ${SRC_FEAT} ${SRC_MATRIX} ${SRC_TRANSFORM} ${SRC_UTIL} ${SRC_HMM} ${SRC_GMM} ${SRC_TREE} ${SRC_LAT} ${SRC_FSTEXT})
